--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "guzzlehttp/guzzle": "~5.3|~6.0"
     },
     "extra": {
         "laravel": {
